CONCF-Fix-Navigation | fix 1px span between WikiaPage and ribbon on small breakpoint

--- a/skins/oasis/css/core/breakpoints-layout.scss
+++ b/skins/oasis/css/core/breakpoints-layout.scss
@@ -105,7 +105,7 @@
 
 		.WikiHeader > nav.WikiNav .navbackground {
 			left: -24px;
-			width: 772px;
+			width: 771px;
 		}
 	}
 
@@ -216,6 +216,7 @@
 
 	.banner-notifications-wrapper {
 		width: auto;
+
 		&.float {
 			@media #{$breakpoint-small-only} {
 				margin-left: $page-width-small / -2;
